# mathm

./: CMakeLists.txt  README.md  matrix.hpp  vector.hpp
test/: CMakeLists.txt  vector_test.cpp
